--- a/src/styles/aui/_aui.table.scss
+++ b/src/styles/aui/_aui.table.scss
@@ -27,7 +27,7 @@
     align-items: center;
     display: flex;
     justify-content: space-between;
-    padding: 0 0 0 inherit;
+    padding: 0;
 
     &:first-child {
       border-top: none;
