--- a/src/styles/base/_base.layout.scss
+++ b/src/styles/base/_base.layout.scss
@@ -15,8 +15,6 @@ html {
   -webkit-font-smoothing: antialiased; // sass-lint:disable-line no-vendor-prefixes
   -webkit-tap-highlight-color: rgba($black, 0); // sass-lint:disable-line no-vendor-prefixes
   box-sizing: border-box;
-  font-smooth: antialiased; // sass-lint:disable-line no-misspelled-properties
-  font-smoothing: antialiased; // sass-lint:disable-line no-misspelled-properties
   text-size-adjust: 100%;
 }
 
